package proto;

import "champions.proto";

// ChampionGameList's are imported into lolstat for searching. These
// are optimized for determining overlap between multiple champions' 
// game lists. All game ID's are in increasing order.
message PackedChampionGameList {
	message ChampionGameList {
		optional ChampionType champion 	= 1;
		repeated uint64 winning			= 2;
		repeated uint64 losing			= 3;
	}
	
	repeated ChampionGameList champions = 1;
	// All game ID's listed together.
	repeated uint64 all					= 2;
}

message GameLog {
	repeated GameRecord games	= 1;
	// Timestamp describing when the gamelog was generated.
	optional uint64 updated		= 2;
}

message GameRecord {
	repeated Team teams 		= 1;
	optional uint64 timestamp 	= 2;
	
	optional uint32 duration	= 3;
	optional uint64 game_id		= 4;
}


// The league that the player was in at the time the games were sampled.
message PlayerRank {
	enum LeagueType {
		BRONZE 		= 0;
		SILVER 		= 1;
		GOLD 		= 2;
		PLATINUM 	= 3;
		DIAMOND		= 4;
	}
	
	optional uint32 level = 1;
	optional LeagueType league = 2;
}

message Player {
	optional string name 		= 1;
	optional uint64 summoner_id	= 2;
	
	optional PlayerRank ranking = 3;
}

message PlayerStats {
	optional Player player 		= 1;
	
	optional uint32 kills 		= 2;
	optional uint32 deaths		= 3;
	optional uint32 assists 	= 4;
	optional uint32 gold		= 5;
	optional uint32 minions		= 6;
	
//	optional string champion 	= 7;
//	optional uint32 champion_id	= 8;
	optional ChampionType champion = 9;
}

message Team {
	repeated PlayerStats players = 1;
	optional bool victory = 2;
}
